Fix pipeline checks for nontermination step case
Replace forbidden JDK collection factories with Guava immutable factories, avoid ECJ warnings in symbolic step-case code, and update generated configuration documentation.